fixed recent search alignment and updated README w/ screenshot

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,2 +1,7 @@
 .form-input , .btn { 
-    display: inline-block;}
+    display: inline-block;
+}
+
+    .recent-history {
+        padding-left: 0;
+      }
